--- a/views/default.hbs
+++ b/views/default.hbs
@@ -7,8 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>
-        Hello {{name}}
-    </h1>
+    <a href="/">Home</a>
+    <a href="/users">Users</a>
+    <a href="/location">Location</a>
+
+    {{{content}}}
 </body>
 </html>
